tests/NormalTests/paczka1/fuzzy1/72317941.err
Error in line 1: HweoCI A945 34,4
Error in line 2: HweoCI S739 11,2
Error in line 16: 9JJNVs4 A558 66,8
Error in line 17: 9JJNVs4 S739 82,8
Error in line 20: ADVzfc A945 12,9
Error in line 22: ADVzfc S739 66,2
Error in line 24: ADVzfc A558 99,4
Error in line 29: ADVzfc S739 17,8
Error in line 7: 4XyaE A996 6,2
